--- a/src/style.css
+++ b/src/style.css
@@ -26,18 +26,21 @@ video {
 }
 
 .space {
-  padding-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .select_label2{
   color: #0c163b;
   font-weight: normal;
+  margin-top: 20px; 
+  display: block;
 }
 
 .newline {
   clear: both; 
-  margin-bottom: 20px;  
-  margin-top: 1px; 
+  margin-bottom: 10px;  
+  margin-top: 10px; 
   margin-left: 50px;
 }
 
